tests/lean/bad_error5.lean.expected.out
bad_error5.lean:13:10: error: don't know how to synthesize placeholder
context:
c : S
⊢ Type ?
bad_error5.lean:13:10: error: _interaction._val_1: trying to evaluate sorry
